projects/compiler/test/typechecker/try/error_bad_location.2.out
Error at %FILE_NAME%:1:12
Invalid location for try expression
  |  func f(x = try 123) {}
                ^
Try expressions can only be used inside of function bodies
