projects/compiler/test/typechecker/try/error_bad_location.2.abra
func f(x = try 123) {}